--- a/TaxiBooking/Web.config
+++ b/TaxiBooking/Web.config
@@ -1,16 +1,16 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
   <configSections>
-    
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="Admin_dbConnectionString" connectionString="Data Source=(LocalDb)\MSSQLLocalDb;Initial Catalog=Admin_db;Integrated Security=True;Pooling=False"
-      providerName="System.Data.SqlClient" />
+    <add name="Projectdb" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Integrated Security=True;Pooling=False;Initial Catalog=wddnproject" providerName="System.Data.SqlClient" />
+    <add name="Admin_dbConnectionString" connectionString="Data Source=(LocalDb)\MSSQLLocalDb;Initial Catalog=Admin_db;Integrated Security=True;Pooling=False" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
@@ -18,6 +18,7 @@
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
+	  <sessionState timeout="60"  />
   </system.web>
   <system.codedom>
     <compilers>
