--- a/TaxiBooking/bin/TaxiBooking.dll.config
+++ b/TaxiBooking/bin/TaxiBooking.dll.config
@@ -10,7 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="Projectdb" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Integrated Security=True;Pooling=False;Initial Catalog=wddnproject" providerName="System.Data.SqlClient" />
-    <add name="Admin_dbConnectionString" connectionString="Data Source=(LocalDb)\MSSQLLocalDb;Initial Catalog=Admin_db;Integrated Security=True;Pooling=False" providerName="System.Data.SqlClient" />
+    <add name="Admin_db" connectionString="Data Source=(LocalDb)\MSSQLLocalDb;Initial Catalog=Admin_db;Integrated Security=True;Pooling=False" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
